--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> A Sustentabilidade </title>
 </head>
 <body>
-    <p>A sociedade </p>
+    <p>A sociedade e a Sustentabilidade</p>
 
 </body>
 </html>
