--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> A Sustentabilidade </title>
+    <link rel="stylesheet"  href="style.css">
+    <title>Sustentabilidade</title>
 </head>
 <body>
-    <p>A sociedade e a Sustentabilidade</p>
+    <div class="caixa-principal">
+       <h1>Sustentabilidade</h1>
+       <div class="caixa-perguntas"></div>
+       <div class="caixa-alternativas"></div>
+       <div class="caixa-resultado">
+           <p class="texto-resultado"></p>
+       </div>
+    
+
+
+    </div>
+   
 
 </body>
 </html>
