--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
        <div class="caixa-alternativas"></div>
        <div class="caixa-resultado">
            <p class="texto-resultado"></p>
-       </div>
-    
-
-
+       </div> 
     </div>
-   
+   <script src="script.js"></script>
+
 
 </body>
 </html>
